# smarc_modelling

./: .gitignore  OptimizationTrajectory.csv  README.md  a_star_results.csv  acados_ocp.json  acados_ocp_SAM_equation_system.json  requirements.txt  saved_trajectory.csv  setup.cfg  simX.csv
PythonVehicleSimulator-master/tests/: ttt.py
c_generated_code/: Makefile  acados_sim_solver_pendulum_ode.c  acados_sim_solver_pendulum_ode.h  acados_solver.pxd  acados_solver_SAM_equation_system.c  acados_solver_SAM_equation_system.h  acados_solver_pendulum_ode.c  acados_solver_pendulum_ode.h  main_SAM_equation_system.c  main_pendulum_ode.c  main_sim_SAM_equation_system.c
c_generated_code/SAM_equation_system_constraints/: SAM_equation_system_constr_h_e_fun.c  SAM_equation_system_constr_h_e_fun_jac_uxt_zt.c  SAM_equation_system_constraints.h
c_generated_code/SAM_equation_system_cost/: SAM_equation_system_cost_y_0_fun.c  SAM_equation_system_cost_y_0_fun_jac_ut_xt.c  SAM_equation_system_cost_y_0_hess.c  SAM_equation_system_cost_y_e_fun.c  SAM_equation_system_cost_y_e_fun_jac_ut_xt.c  SAM_equation_system_cost_y_e_hess.c  SAM_equation_system_cost_y_fun.c  SAM_equation_system_cost_y_fun_jac_ut_xt.c  SAM_equation_system_cost_y_hess.c
c_generated_code/SAM_equation_system_model/: SAM_equation_system_expl_ode_fun.c  SAM_equation_system_expl_vde_adj.c  SAM_equation_system_expl_vde_forw.c  SAM_equation_system_impl_dae_fun_jac_x_xdot_u.c  SAM_equation_system_impl_dae_fun_jac_x_xdot_z.c
c_generated_code/pendulum_ode_cost/: pendulum_ode_cost.h  pendulum_ode_cost_y_0_fun.c  pendulum_ode_cost_y_0_fun_jac_ut_xt.c  pendulum_ode_cost_y_0_hess.c  pendulum_ode_cost_y_e_fun.c  pendulum_ode_cost_y_e_fun_jac_ut_xt.c  pendulum_ode_cost_y_e_hess.c  pendulum_ode_cost_y_fun.c  pendulum_ode_cost_y_fun_jac_ut_xt.c  pendulum_ode_cost_y_hess.c
c_generated_code/pendulum_ode_model/: pendulum_ode_impl_dae_fun.c  pendulum_ode_impl_dae_fun_jac_x_xdot_u.c  pendulum_ode_impl_dae_fun_jac_x_xdot_u_z.c  pendulum_ode_impl_dae_fun_jac_x_xdot_z.c  pendulum_ode_impl_dae_jac_x_xdot_u_z.c
motion_primitives_package/: package.xml  setup.cfg  setup.py
motion_primitives_package/motion_primitives_package/: MotionPrimitivesNode.py
python_vehicle_simulator/: sam_sym.py
python_vehicle_simulator/lib/: gnc.py
python_vehicle_simulator/vehicles/: SAM.py
src/Old stuff/: Acados_tutorial_doc.py  acados_sim_test.py  acados_sim_trajectory.py  acados_solver_test.py  test.py
src/python_vehicle_simulator/: README.md  sam_sym.py  simple_sam_sim.py
src/smarc_modelling/: LQR.py  LQR_sim.py  README.md  Stat_analysis_Planning.py  acados_Trajectory_simulator.py  acados_sim_test.py  acados_sim_test_minState.py  acados_sim_trajectory.py  acados_simulator.py  brov_sim.py  control.py  read_trajectory.py  resolution01.csv  sam_casadi_ros.py  sam_casadi_sim.py  sam_sim.py  sam_sim_jonny.py  scary_acados_tester.py  simonTrajectory.csv  simple_sam_sim.py
src/smarc_modelling.egg-info/: PKG-INFO  SOURCES.txt
src/smarc_modelling/lib/: gnc.py  (+2 more)
src/smarc_modelling/piml/piml_msgs/: CMakeLists.txt  README.md  package.xml
src/smarc_modelling/piml/piml_msgs/msg/: SynchedData.msg  ThrusterRPMStamped.msg
tests/: cgcg.py
(+163 files in other folders)
