[metadata]
name = smarc_modelling
version = 1.0.1
author = SMaRC
author_email = 
description = SMaRC vehicles models and others. Based on the Python Vehicle Simulator by T. Fossen
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    pytest
setup_requires = 
    numpy
    matplotlib
    pytest

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
